# padic-L

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Readme_by_jxta  pyproject.toml  requirements.txt
src/padic_l/: __init__.py
src/padic_l/core/: __init__.py
