[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "padic-L"
authors = [
    {name = "Miho Aoki", email = "aoki@shimane-u.ac.jp"},
    {name = "Project Team", email = "team@padic-research.org"},
]
description = "P-adic L-functions and Prime Distribution Theory Research"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0", 
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "sympy>=1.8",
    "mpmath>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "pre-commit>=2.13.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
    "nbsphinx>=0.8.0",
]
ml = [
    "scikit-learn>=1.0.0",
    "tensorflow>=2.6.0",
    "torch>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/jxta/padic-L"
Documentation = "https://padic-l.readthedocs.io/"
Repository = "https://github.com/jxta/padic-L.git"
Issues = "https://github.com/jxta/padic-L/issues"

[project.scripts]
padic-experiment = "src.cli.main:main"

[tool.setuptools_scm]
write_to = "src/padic_l/_version.py"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "mathematical: marks tests that verify mathematical correctness",
    "sage: marks tests that require SageMath",
]